Allow user to input to any number of decimal places

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Biochar GeoMix 11 Calculator</h1>
         <form>
             <label for="length">Plot Length:</label>
-            <input type="text" id="length" name="length" pattern="\d+(\.\d{1,2})?" placeholder="Enter length of Plot for one crop" required>
+            <input type="text" id="length" name="length" pattern="\d+(\.\d+)?" placeholder="Enter length of Plot for one crop" required>
             <br>
             <label for="breadth">Plot Width:</label>
-            <input type="text" id="breadth" name="breadth" pattern="\d+(\.\d{1,2})?" placeholder="Enter width of the plot" required>
+            <input type="text" id="breadth" name="breadth" pattern="\d+(\.\d+)?" placeholder="Enter width of the plot" required>
             <br>
             <label for="unit">Unit:</label>
             <select name="unit">
